--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,11 @@
 *.zip
 *.tar.gz
 *.rar
-src/main/resources/web/node_modules
+src/main/web/node_modules
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/src/main/resources/web/node_modules/
+/src/main/web/node_modules/
+/src/main/web/.angular/
+/src/main/static
 /target/
+/node/
